<resources>
    <string name="app_name">Notlelo</string>
    <string name="selected_event_key">selected_event_key</string>
    <string name="shared_preferences_file">shared_preferences_file</string>
    <string name="lowercase_app_name">notlelo</string>
    <string name="home_camera">Prendre en photo</string>
    <string name="home_library">Mes numéros de lot</string>
    <string name="home_settings">Paramètres</string>
    <string name="error_happened">Une erreur est survenue</string>
    <string name="home_no_event"> aucun camp </string>
    <string name="home_event_input_placeholder">nom du camp</string>
    <string name="notlelo_share">Exporter les numéros de lots</string>
    <string name="file_saved">Fichier enregistré</string>
    <string name="camera_validate">Valider</string>
    <string name="camera_cancel">Annuler</string>
    <string name="camera_product_input_title">Produit</string>
    <string name="camera_product_input_label">Nom du produit</string>
    <string name="camera_meal_input_title">Repas</string>
    <string name="camera_meal_input_label">Nom du repas</string>
    <string name="camera_event_input_label">Nom de l\'évènement</string>
    <string name="camera_product_name_placeholder">boîte de Montblanc</string>
    <string name="camera_meal_name_placeholder">déjeuner</string>
    <string name="camera_event_name_placeholder">camp 2020</string>
    <string name="camera_product_saved">Le produit a été enregistré</string>
    <string name="camera_validate_disabled">Veuillez prendre une photo avant d\'enregistrer le produit</string>
    <string name="camera_wait_to_take_picture">Veuillez attendre avant de prendre une nouvelle photo</string>
    <string-array name="camera_meals">
        <item>Petit-déjeuner</item>
        <item>Déjeuner</item>
        <item>Goûter</item>
        <item>Dîner</item>
        <item>Autre</item>
    </string-array>
    <string name="library_close">Fermer</string>
    <string name="library_delete">Supprimer</string>
    <string name="library_compress">Télécharger au format zip</string>
    <string name="library_share">Partager</string>
    <string name="library_meal_input_placeholder">petite fringale</string>
    <string name="library_share_loading">L\'archivage des photos est en cours, veuillez patienter</string>
    <string name="library_share_success">L\'archive a bien été partagée</string>
    <string name="library_share_not_available">Le partage de fichier n\'est pas disponible sur votre appareil</string>
    <string name="library_breakfast">Petit-déjeuner</string>
    <string name="library_lunch">Déjeuner</string>
    <string name="library_snack">Goûter</string>
    <string name="library_dinner">Dîner</string>
    <string name="library_fifth">Cinquième</string>
    <string name="library_cooking_contest">Concours cuisine</string>
    <string name="library_picnic">Pique-nique</string>
    <string name="library_title">Bibliothèque</string>
    <string name="library_confirm_delete_product">Voulez-vous vraiment supprimer ce produit ?</string>
    <string name="library_delete_product_success">Le produit a bien été supprimé</string>
    <string name="day_monday">lundi</string>
    <string name="day_tuesday">mardi</string>
    <string name="day_wednesday">mercredi</string>
    <string name="day_thursday">jeudi</string>
    <string name="day_friday">vendredi</string>
    <string name="day_saturday">samedi</string>
    <string name="day_sunday">dimanche</string>
    <string name="day_first_short">er</string>
    <string name="month_january">janvier</string>
    <string name="month_february">février</string>
    <string name="month_march">mars</string>
    <string name="month_april">avril</string>
    <string name="month_may">mai</string>
    <string name="month_june">juin</string>
    <string name="month_july">juillet</string>
    <string name="month_august">août</string>
    <string name="month_september">septembre</string>
    <string name="month_october">octobre</string>
    <string name="month_november">novembre</string>
    <string name="month_december">décembre</string>
    <string name="settings_deleteEvent">Supprimer un camp</string>
    <string name="settings_delete">Supprimer</string>
    <string name="settings_noCamp">Aucun camp créé</string>
    <string name="settings_deleteSuccess">Les camps ont bien été supprimés</string>
    <string name="library_confirm_delete_events">Voulez-vous vraiment supprimer ces camps ?</string>
    <string name="settings_picture_resolution">Résolution des photos</string>
    <string name="settings_picture_resolution_description">La résolution définie la qualité et la taille des photos prises.</string>
    <string name="settings_picture_resolution_value">Résolution choisie : %1$sp</string>
    <string name="settings_about">Contact</string>
    <string name="settings_aboutDescription">Si vous souhaitez signaler un problème, donner des suggestions d\'améliorations ou pour autre chose :</string>
    <string name="settings_signature">Notlelo a été développée avec 🤍 par Eflamm Ollivier</string>
    <string name="settings_clickHere">Cliquez ici !</string>
    <string name="faq_title">Foire aux questions</string>
    <string name="faq_archive_event_question">Comment archiver toutes les photos d\'un camp ?</string>
    <string name="faq_archive_event_answer1">Il suffit d\'appuyer sur le bouton </string>
    <string name="faq_archive_event_answer2">qui se trouve dans la rubrique \"Mes numéros de lot\". Une archive va être céée, et vous aurez la possibilité de la partager via un service tiers (e.g. mail, Google Drive, etc…).</string>
    <string name="faq_availableOnIOS_question">L\'application est-elle disponible sur iOS ?</string>
    <string name="faq_availableOnIOS_answer">Pour le moment Notlelo n\'est pas disponible sur l\'App Store d\'Apple. Notamment parce que les frais pour déployer une application dessus sont élevés.</string>
    <string name="faq_found_a_bug_question">J\'ai trouvé un bug dans l\'application, que dois-je faire ?</string>
    <string name="faq_found_a_bug_answer">L\'application est encore en cours de développement et n\'a été testée que sur très peu d\'appareil. Si vous avez trouvé un bug, veuillez m\'en faire part en cliquant sur le bouton dans Contact.</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="icon_desc_go_back">Retourner à la page précédente</string>
    <string name="icon_desc_add_event">Ajouter un nouvel évènement</string>
    <string name="icon_desc_confirm_add_event">Confirmer l\'ajout de évènement</string>
    <string name="icon_desc_cancel_add_event">Annuler l\'ajout de évènement</string>
    <string name="icon_desc_take_picture">Prendre une photo</string>
    <string name="icon_desc_add_product">Ajouter un produit</string>
    <string name="icon_desc_share_event">Compresser et partager un évènement</string>
    <string name="icon_desc_delete_event">Supprimer un produit</string>
    <string name="icon_desc_selecting_value">Sélectionner un choix</string>
    <string name="icon_desc_selected_value">Choix sélectionnée</string>
</resources>
