<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4EF"
    tools:context=".SettingsActivity"
    >

    <io.eflamm.notlelo.views.HeaderViewOld
        app:titleText="@string/home_settings"
        android:id="@+id/settingsHeaderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_deleteEvent"
        android:textColor="@color/secondary"
        android:textSize="@dimen/h1"
        android:layout_marginStart="@dimen/h1Margin"
        android:letterSpacing="@dimen/defaultLetterSpacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeaderView" />

    <Button
        android:id="@+id/deleteEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_deleteEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="83dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsEventList"/>

    <View
        android:id="@+id/hr1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="54dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@+id/deleteEventsButton"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq_title"
        android:textColor="@color/secondary"
        android:textSize="@dimen/h1"
        android:layout_marginStart="@dimen/h1Margin"
        android:letterSpacing="@dimen/defaultLetterSpacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr1" />

    <View
        android:id="@+id/hr2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/settings_about"
        android:textSize="@dimen/h1"
        android:textColor="@color/secondary"
        android:layout_marginStart="@dimen/h1Margin"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary"
        android:layout_marginBottom="10dp"
        android:letterSpacing="@dimen/defaultLetterSpacing"
        android:text="@string/settings_aboutDescription"
        app:layout_constraintBottom_toTopOf="@+id/contactButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/settings_clickHere"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/settings_signature"
        android:textColor="@color/secondary"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="version"
        android:textColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/settingsEventList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/deleteEventsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>