<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4EF"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/image_title_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:scaleY="1.40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ripped_paper" />

    <TextView
        android:id="@+id/text_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caveat_brush"
        android:letterSpacing="0.04"
        android:shadowColor="@color/white"
        android:shadowRadius="2"
        android:text="@string/lowercase_app_name"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="130sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_title_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_title_background"
        app:layout_constraintTop_toTopOf="@+id/image_title_background" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:gravity="fill"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layout_select_camp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/select_home_event"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/button_home_add_event"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:onClick="onClickAddEventButton"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_create_camp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/text_input_home_camp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/home_event_input_placeholder"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/button_home_validate_add"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="O"
                android:onClick="onClickValidateAddEventButton" />

            <Button
                android:id="@+id/button_home_cancel_add"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="X"
                android:onClick="onClickCancelAddEventButton" />
        </LinearLayout>

        <Button
            android:id="@+id/button_home_camera"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_camera"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_home_library"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_library"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_home_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_settings"
            android:textAllCaps="false"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>