<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.camera.view.PreviewView>

    <LinearLayout
        android:id="@+id/layout_camera_save_product"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="150dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:letterSpacing="0.05"
            android:text="@string/camera_product_input_label"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/input_product_name"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/camera_product_name_placeholder"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:letterSpacing="0.05"
            android:text="@string/camera_meal_input_label"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/layout_camera_select_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/meal_spinner"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_camera_input_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/input_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="O" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="X" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_camera_save_picture_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/camera_cancel"
                android:textColor="@color/white"
                android:onClick="onClickCancelSaveProduct"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/camera_validate"
                android:textColor="@color/white"
                android:onClick="onClickValidateSaveProduct" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_camera_buttons"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/button5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="X"
            android:onClick="onClickBackButton" />

        <Button
            android:id="@+id/button_camera_capture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="Take Photo" />

        <Button
            android:id="@+id/button4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="O"
            android:onClick="onClickSaveProduct" />

    </LinearLayout>

    <Button
        android:id="@+id/emptyPreviewListButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="X"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClickEmptyPreviews" />

    <LinearLayout
        android:id="@+id/previewList"
        android:layout_width="80dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyPreviewListButton">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>